--- a/storm-core/src/ui/public/topology.html
+++ b/storm-core/src/ui/public/topology.html
@@ -103,7 +103,7 @@ function clearLoggerLevel(id){
 }
 
 function sendLoggerLevel(id){
-    var topologyId = $.url("?id");
+    var topologyName = $.url("?name");
     var shouldRemove = $("#loggerRemove-" + id).val() === "true";
     var level = $("#loggerLevel-" + id).val();
     var timeout = parseInt($("#loggerTimeout-" + id).val());
@@ -139,11 +139,11 @@ function sendLoggerLevel(id){
     loggerSetting.reset_level  = "INFO";
     loggerSetting.timeout = timeout;
 
-    sendRequest (topologyId, "logconfig", null, data, toggleChangeLogLevel);
+    sendRequest (topologyName, "logconfig", null, data, toggleChangeLogLevel);
 };
 
 function renderLogLevelForm (template, responseData){
-    var topologyId = $.url("?id");
+    var topologyName = $.url("?name");
     var container = $("#change-log-level");
 
     var levels = [
@@ -222,8 +222,8 @@ function renderLogLevelForm (template, responseData){
         container.show('fast');
     };
     if (!responseData) {
-        var topologyId = $.url("?id");
-        $.get ('/api/v1/topology/' + topologyId + '/logconfig', renderImpl);
+        var topologyName = $.url("?name");
+        $.get ('/api/v1/topology/' + topologyName + '/logconfig', renderImpl);
     } else {
         renderImpl (responseData);
     }
@@ -235,11 +235,11 @@ $(document).ajaxStart(function(){
     }
 });
 $(document).ready(function() {
-    var topologyId = $.url("?id");
-    var tableStateKey = ":".concat(topologyId);
+    var topologyName = $.url("?name");
+    var tableStateKey = ":".concat(topologyName);
     var window = $.url("?window");
     var sys = $.cookies.get("sys") || "false";
-    var url = "/api/v1/topology/"+topologyId+"?sys="+sys;
+    var url = "/api/v1/topology/"+topologyName+"?sys="+sys;
     if(window) url += "&window="+window;
     $.extend( $.fn.dataTable.defaults, {
       stateSave: true,
